--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,176 @@
-body {
+*,
+*:before,
+*:after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+/*
+body {
+  font-family: "Karla", sans-serif;
+}
+*/
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/*=================
+Tenzies
+=================*/
+
+.box-container {
+  width: 380px;
+  height: 480px;
+  background-color: #1b9eeb;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.box-container-border {
+  width: 420px;
+  height: 539px;
+  border-radius: 6.4px;
+  background-color: #032438;
+  padding: 30px 20px 30px 20px;
+  margin: 6em auto;
+}
+
+.die-container {
+  display: grid;
+  grid-template-columns: 60px 60px 60px 60px 60px;
+  grid-gap: 12px;
+}
+
+.rules-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tenzies-title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.tries-info {
+  display: flex;
+  flex-direction: column;
+}
+
+/* =================
+   Magic Square
+================= */
+.container-board-magicsquare {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #667db6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #667db6,
+    #0082c8,
+    #0082c8,
+    #667db6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #667db6,
+    #0082c8,
+    #0082c8,
+    #667db6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  min-width: 430px;
+  padding-bottom: 2rem;
+}
+
+.main-board {
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 2em;
+}
+.header-magic-square {
+  text-align: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.title-magic-square,
+h3 {
+  color: #fff;
+}
+
+.btn-newgame {
+  padding: 0.75em 1.15em;
+  height: 50px;
+  width: 150px;
+  border-radius: 15px;
+  background: #159957;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #155799, #159957);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #155799, #159957);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 1em;
+}
+
+.square {
+  height: 100px;
+  width: 75px;
+  background-color: #fff;
+  color: black;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-size: 2rem;
+}
+
+.btn-container {
+  margin-bottom: 2em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5em;
+}
+
+.number-btn {
+  padding: 2em;
+  border: none;
+  border-radius: 0.5em;
+  background: #56ccf2;
+  color: #000;
+  font-weight: 700;
+  font-size: 1.15rem;
+}
+
+.rules {
+  color: #000;
+  font-weight: 700;
+  text-align: center;
+  font-size: 1.25rem;
 }
